--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                   </div>
                   <div class="col-sm-6 col-md-7">
                     <div class="about-info">
-                      <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                      <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>contact@example.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                      <p><span class="title-s">Name: </span> <span>Vinay Chavda</span></p>
+                      <p><span class="title-s">Profile: </span> <span>Android Developer</span></p>
+                      <p><span class="title-s">Email: </span> <span>chavdavinay369@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>(+91) 9558346229</span></p>
                     </div>
                   </div>
                 </div>
