--- a/index.html
+++ b/index.html
@@ -137,8 +137,11 @@
                    Software engineer with a passion for developing innovative programs that expedite the efficiency and effectiveness of organizational success.
                   </p>
                   <p class="lead">
-                    Well-versed in technology and writing code to create systems that are reliable and user-friendly. Skilled leader who has the proven ability to motivate, educate, and manage a team of professionals to build software programs and effectively track changes. Confident communicator, strategic thinker, and innovative creator to develop software that is customized to meet a company’s organizational needs, highlight their core competencies, and further their success
+                    Well-versed in technology and writing code to create systems that are reliable and user-friendly. Skilled leader who has the proven ability to motivate, educate, and manage a team of professionals to build software programs and effectively track changes.
                   </p>
+                   <p class="lead">
+                    Confident communicator, strategic thinker, and innovative creator to develop software that is customized to meet a company’s organizational needs, highlight their core competencies, and further their success
+                  </p
                 </div>
               </div>
             </div>
