--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Vinay Chavda</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Android developer,Web Developer,Web Designer,Frontend Developer,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Android developer,IDE : Android Studio,PHP(Basic),Firebase,SQLite</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -99,6 +99,7 @@
                       <p><span class="title-s">Profile: </span> <span>Android Developer</span></p>
                       <p><span class="title-s">Email: </span> <span>chavdavinay369@gmail.com</span></p>
                       <p><span class="title-s">Phone: </span> <span>(+91) 9558346229</span></p>
+                      <p><span class="title-s">Address: </span> <span>Plot 81-82/B♦ Himalay Park ♦Near Khodiyar Nagar ♦ Top 3 Circle ♦ Bhavnagar.</span></p>
                     </div>
                   </div>
                 </div>
